# linux-wechat-hook

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
base/: CMakeLists.txt
base/src/: CMakeLists.txt
demo/: CMakeLists.txt  virus.cpp  wechat_hook.cpp
src/: CMakeLists.txt
src/infector/: CMakeLists.txt  editso.cpp  editso.h  infector.cpp  infector.h
src/infector/elf/: elf_dynamic.cpp  elf_dynamic.h  elf_dynsym.cpp  elf_dynsym.h  elf_gnuver_r.cpp  elf_gnuver_r.h  elf_reladyn.cpp  elf_reladyn.h  elf_section.cpp  elf_section.h  elfopt.cpp  elfopt.h
src/inject/: CMakeLists.txt  eviluser.cpp  eviluser.h  inject.cpp  inject.h
src/xed/: CMakeLists.txt  xed-decoded-init.c  xed-decoded-inst-api.h  xed-decoded-inst.h  xed-encode-tables.h  xed-ild.c  xed-init.c  xed-tables-decl.h  xed-tables.h
